--- a/iOS-Filters/Base.lproj/Main.storyboard
+++ b/iOS-Filters/Base.lproj/Main.storyboard
@@ -17,8 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqK-IV-nvO">
-                                <rect key="frame" x="0.0" y="64" width="320" height="460"/>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="hqK-IV-nvO">
+                                <rect key="frame" x="0.0" y="64" width="320" height="377"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CS9-pv-c3z">
                                 <rect key="frame" x="0.0" y="524" width="320" height="44"/>
@@ -30,13 +30,70 @@
                                     <action selector="applyFilter:" destination="BYZ-38-t0r" eventType="touchUpInside" id="xaa-yh-qVz"/>
                                 </connections>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="e42-k0-pYs">
+                                <rect key="frame" x="0.0" y="449" width="320" height="75"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="gY4-bn-yPp">
+                                        <rect key="frame" x="8" y="12.5" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="95X-4h-rzf"/>
+                                            <constraint firstAttribute="height" constant="50" id="f0k-nY-T76"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="O4E-Hp-6Tk">
+                                        <rect key="frame" x="66" y="12" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="0YF-nx-LaK"/>
+                                            <constraint firstAttribute="height" constant="50" id="Lm0-k8-4XR"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="rkf-eq-Dad">
+                                        <rect key="frame" x="124" y="12" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="2uy-P4-a0T"/>
+                                            <constraint firstAttribute="height" constant="50" id="V3d-Y4-5Uf"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="b4R-lJ-6oG">
+                                        <rect key="frame" x="182" y="12" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="3Sw-sU-8ZC"/>
+                                            <constraint firstAttribute="height" constant="50" id="63K-xi-0et"/>
+                                        </constraints>
+                                    </imageView>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="3Tt-iS-0Au">
+                                        <rect key="frame" x="240" y="12" width="50" height="50"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="50" id="daT-gL-Atj"/>
+                                            <constraint firstAttribute="height" constant="50" id="fA6-nO-DuJ"/>
+                                        </constraints>
+                                    </imageView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstItem="b4R-lJ-6oG" firstAttribute="centerY" secondItem="rkf-eq-Dad" secondAttribute="centerY" id="3ND-eG-5dj"/>
+                                    <constraint firstItem="rkf-eq-Dad" firstAttribute="leading" secondItem="O4E-Hp-6Tk" secondAttribute="trailing" constant="8" id="3gq-ag-HZT"/>
+                                    <constraint firstItem="gY4-bn-yPp" firstAttribute="leading" secondItem="e42-k0-pYs" secondAttribute="leading" constant="8" id="5sX-K5-cXZ"/>
+                                    <constraint firstAttribute="height" constant="75" id="CXd-XY-yns"/>
+                                    <constraint firstItem="gY4-bn-yPp" firstAttribute="centerY" secondItem="e42-k0-pYs" secondAttribute="centerY" id="ExJ-Q9-1qI"/>
+                                    <constraint firstItem="O4E-Hp-6Tk" firstAttribute="centerY" secondItem="gY4-bn-yPp" secondAttribute="centerY" id="JIi-Dy-mLF"/>
+                                    <constraint firstItem="3Tt-iS-0Au" firstAttribute="centerY" secondItem="b4R-lJ-6oG" secondAttribute="centerY" id="NxP-VA-PFE"/>
+                                    <constraint firstItem="O4E-Hp-6Tk" firstAttribute="leading" secondItem="gY4-bn-yPp" secondAttribute="trailing" constant="8" id="aPk-x6-FZU"/>
+                                    <constraint firstItem="3Tt-iS-0Au" firstAttribute="leading" secondItem="b4R-lJ-6oG" secondAttribute="trailing" constant="8" id="enb-tQ-iFf"/>
+                                    <constraint firstItem="rkf-eq-Dad" firstAttribute="centerY" secondItem="O4E-Hp-6Tk" secondAttribute="centerY" id="mrh-oI-mTB"/>
+                                    <constraint firstItem="b4R-lJ-6oG" firstAttribute="leading" secondItem="rkf-eq-Dad" secondAttribute="trailing" constant="8" id="vpa-Dp-tFm"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="CS9-pv-c3z" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6Gi-Xs-ZY8"/>
                             <constraint firstAttribute="trailing" secondItem="hqK-IV-nvO" secondAttribute="trailing" id="77E-Qc-8bC"/>
                             <constraint firstAttribute="trailing" secondItem="CS9-pv-c3z" secondAttribute="trailing" id="BFO-ao-kfa"/>
-                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="hqK-IV-nvO" secondAttribute="bottom" id="GWb-Jx-box"/>
+                            <constraint firstItem="e42-k0-pYs" firstAttribute="top" secondItem="hqK-IV-nvO" secondAttribute="bottom" constant="8" id="CyX-k0-6Jz"/>
+                            <constraint firstItem="CS9-pv-c3z" firstAttribute="top" secondItem="e42-k0-pYs" secondAttribute="bottom" id="EyY-kN-YrV"/>
+                            <constraint firstItem="e42-k0-pYs" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="IvV-mS-wIZ"/>
+                            <constraint firstAttribute="trailing" secondItem="e42-k0-pYs" secondAttribute="trailing" id="gxU-Vf-nF3"/>
                             <constraint firstItem="hqK-IV-nvO" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="t6J-CT-RVc"/>
                             <constraint firstAttribute="bottom" secondItem="CS9-pv-c3z" secondAttribute="bottom" id="uNX-e8-VdP"/>
                             <constraint firstItem="hqK-IV-nvO" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="vUe-XX-aqa"/>
@@ -48,6 +105,8 @@
                     <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
                     <connections>
                         <outlet property="imageView" destination="hqK-IV-nvO" id="pgg-Aq-gnM"/>
+                        <outlet property="invertImageView" destination="gY4-bn-yPp" id="6lw-Ua-Yy4"/>
+                        <outlet property="sepiaImageView" destination="O4E-Hp-6Tk" id="TIL-sS-4YZ"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
